--- a/SnakeGame/Base.lproj/Main.storyboard
+++ b/SnakeGame/Base.lproj/Main.storyboard
@@ -705,17 +705,17 @@
         <scene sceneID="hIz-AP-VOD">
             <objects>
                 <viewController id="XfG-lQ-9wD" customClass="GameViewController" customModule="SnakeGame" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" id="m2S-Jp-Qdl" customClass="SKView">
+                    <view key="view" id="m2S-Jp-Qdl" customClass="SKView" customModule="SpriteKit">
                         <rect key="frame" x="0.0" y="0.0" width="800" height="600"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </view>
                     <connections>
-                        <outlet property="skView" destination="m2S-Jp-Qdl" id="qux-te-cT3"/>
+                        <outlet property="skView" destination="m2S-Jp-Qdl" id="72g-FP-Bdg"/>
                     </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="817"/>
+            <point key="canvasLocation" x="58" y="813"/>
         </scene>
     </scenes>
 </document>
