solved two errors from storyboard, stiill having issue seeing game when ran

--- a/SnakeGame/Base.lproj/Main.storyboard
+++ b/SnakeGame/Base.lproj/Main.storyboard
@@ -704,13 +704,13 @@
         <!--Game View Controller-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
-                <viewController id="XfG-lQ-9wD" customClass="GameViewController" customModule="SnakeGame" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="GameViewController" id="XfG-lQ-9wD" customClass="GameViewController" customModule="SnakeGame" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="m2S-Jp-Qdl" customClass="SKView" customModule="SpriteKit">
                         <rect key="frame" x="0.0" y="0.0" width="800" height="600"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </view>
                     <connections>
-                        <outlet property="skView" destination="m2S-Jp-Qdl" id="72g-FP-Bdg"/>
+                        <outlet property="skView" destination="m2S-Jp-Qdl" id="02J-KL-cUE"/>
                     </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
